Fix search bar routing and z-index bugs

--- a/src/components/common/SearchBar/searchbar.module.scss
+++ b/src/components/common/SearchBar/searchbar.module.scss
@@ -9,7 +9,7 @@
   $height: 60px;
   height: $height;
   display: flex;
-  z-index: 1;
+  z-index: 2;
 
   &.right {
     margin-left: auto;
